--- a/papers/references.bib
+++ b/papers/references.bib
@@ -6764,3 +6764,17 @@ volume = {98},
 year = {2018}
 }
 
+@article{Ballhausen,
+author = {Ballhausen, C. J.},
+doi = {10.1002/qua.560050844},
+issn = {00207608},
+journal = {International Journal of Quantum Chemistry},
+month = {jun},
+number = {S5},
+pages = {373--377},
+title = {{Crystal and ligand field theory}},
+url = {http://doi.wiley.com/10.1002/qua.560050844},
+volume = {5},
+year = {2009}
+}
+
